# dwmstatus

./: .gitignore  Changelog  LICENSE  Makefile  README.md  config.h  config.mk  dwmstatus.c  dwmstatus.h  meson.build
prev/: dwmstatus-2.10.c  dwmstatus-2.11.c  dwmstatus-2.12.c  dwmstatus-2.13.c  dwmstatus-2.14.c
src/: Makefile  config.def.h  config.h  config.mk  dwmstatus  dwmstatus.c  dwmstatus.h  dwmstatus_std.c  dwmstatus_xcb.c  meson.build
